@@ -1,36 +1,0 @@
-.TH ERIS 1
-.SH NAME
-eris-config - script to get information about the installed version of eris
-.SH SYNOPSIS
-.B eris-config
-[\-\-prefix] [\-\-exec\-prefix] [\-\-version] [\-\-libs] [\-\-cflags]
-.SH DESCRIPTION
-.PP
-\fIeris-config\fP is a tool that is used to configure to determine
-the compiler and linker flags that should be used to compile
-and link programs that use \fIeris\fP. It is also used internally
-to the .m4 macros for GNU autoconf that are included with \fIeris\fP.
-.
-.SH OPTIONS
-.l
-\fIeris-config\fP accepts the following options:
-.TP 8
-.B  \-\-version
-Print the currently installed version of \fIeris\fP on the standard output.
-.TP 8
-.B  \-\-libs
-Print the linker flags that are necessary to link a \fIeris\fP program.
-.TP 8
-.B  \-\-cflags
-Print the compiler flags that are necessary to compile a \fIeris\fP program.
-.TP 8
-.B  \-\-prefix
-Return the installation prefix that \fIeris\fP was built with when computing
-the output for the \-\-cflags and \-\-libs options. This option is also used for
-the exec prefix if \-\-exec\-prefix was not specified. This option must be specified
-before any \-\-libs or \-\-cflags options.
-.TP 8
-.B  \-\-exec\-prefix
-Return the installation exec prefix that \fIeris\fP was built with when
-computing the output for the \-\-cflags and \-\-libs options.  This option must
-be specified before any \-\-libs or \-\-cflags options.
