@@ -1,66 +1,0 @@
-#!/bin/sh
-# Library config detection script for atlas.
-# by Michael Koch
-# stolen from Atlas-C++
-# Shamelessly stolen from SDL
-
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-exec_prefix_set=no
-
-usage="\
-Usage: eris-config [--prefix[=DIR]] [--exec-prefix[=DIR]] [--version] [--libs] [--static-libs] [--cflags]"
-
-if test $# -eq 0; then
-      echo "${usage}" 1>&2
-      exit 1
-fi
-
-while test $# -gt 0; do
-  case "$1" in
-  -*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'` ;;
-  *) optarg= ;;
-  esac
-
-  case $1 in
-    --prefix=*)
-      prefix=$optarg
-      if test $exec_prefix_set = no ; then
-        exec_prefix=$optarg
-      fi
-      ;;
-    --prefix)
-      echo $prefix
-      ;;
-    --exec-prefix=*)
-      exec_prefix=$optarg
-      exec_prefix_set=yes
-      ;;
-    --exec-prefix)
-      echo $exec_prefix
-      ;;
-    --version)
-      echo @VERSION@
-      ;;
-    --cflags)
-      # Handle oddities in Win32 path handling (assumes prefix)
-      prefix=`echo ${prefix} | sed 's,^//\([A-Z]\),\1:,'`
-
-      includes=-I@includedir@/Eris-1.0
-      echo $includes @ERIS_CFLAGS@
-      ;;
-    --libs)
-      libdirs="-L@libdir@"
-      echo $libdirs @ERIS_LIBS@
-      ;;
-    --static-libs)
-      libdirs="-L@libdir@"
-      echo $libdirs @ERIS_LIBS@ @SYSTEM_LIBS@
-      ;;
-    *)
-      echo "${usage}" 1>&2
-      exit 1
-      ;;
-  esac
-  shift
-done
